--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Isma's Lieblings-Angelofolge</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <style>
-        body { font-family: Arial, sans-serif; }
-    </style>
+    <title>Angelo - Keine Süßigkeiten für Peter!</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100">
-    <div class="flex items-center justify-center min-h-screen">
-        <div class="bg-white rounded-2xl shadow-xl p-10 max-w-xl text-center">
-            <h1 class="text-4xl font-bold text-blue-600 mb-6">Isma's Lieblings-Angelofolge</h1>
-            <p class="text-lg text-gray-700 mb-4">Welcome to the best Angelofolge page! Stay tuned for updates.</p>
-            <button class="mt-4 px-6 py-2 bg-blue-500 text-white font-bold rounded-xl hover:bg-blue-600 transition">Explore More</button>
+<body>
+    <header>
+        Angelo - Keine Süßigkeiten für Peter!
+    </header>
+    <div class="summary-container">
+        <div class="summary">
+            <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen. Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. Damit Peter die drei nicht beim Spielen von „Hai-Alarm“ stört, versuchen sie, ihn mit einem Haufen an Süßigkeiten ruhigzustellen. Dieser Plan geht allerdings nach hinten los und Peter dreht wegen des vielen Zuckers komplett durch …</p>
         </div>
+        <div class="animation-wrapper">
+            <div class="animation-text">Achtung, Zuckerrausch!</div>
+        </div>
+        <button class="button" onclick="startAnalysis()">Start Analyse</button>
     </div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
