--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
         Angelo - Keine Süßigkeiten für Peter!
     </header>
     <div class="summary-container">
-        <div class="summary">
-            <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen. Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. Damit Peter die drei nicht beim Spielen von „Hai-Alarm“ stört, versuchen sie, ihn mit einem Haufen an Süßigkeiten ruhigzustellen. Dieser Plan geht allerdings nach hinten los und Peter dreht wegen des vielen Zuckers komplett durch …</p>
+        <div class="summary-item animate-from-left">
+            <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.</p>
+        </div>
+        <div class="summary-item animate-from-right">
+            <p>Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. Damit Peter die drei nicht beim Spielen von „Hai-Alarm“ stört, versuchen sie, ihn mit einem Haufen an Süßigkeiten ruhigzustellen.</p>
+        </div>
+        <div class="summary-item animate-from-left">
+            <p>Dieser Plan geht allerdings nach hinten los und Peter dreht wegen des vielen Zuckers komplett durch …</p>
         </div>
         <div class="animation-wrapper">
             <div class="animation-text">Achtung, Zuckerrausch!</div>
         </div>
         <button class="button" onclick="startAnalysis()">Start Analyse</button>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
