--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
 </head>
 <body>
     <header>
-        Angelo - Keine Süßigkeiten für Peter!
+        <h1>Angelo - Keine Süßigkeiten für Peter!</h1>
     </header>
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.</p>
         </div>
         <div class="summary-item animate-from-right">
-            <p>Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. Damit Peter die drei nicht beim Spielen von „Hai-Alarm“ stört, versuchen sie, ihn mit einem Haufen an Süßigkeiten ruhigzustellen.</p>
+            <p>Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty. Doch er hört ihm nicht bei der Warnung zu, dass Peter keine Süßigkeiten bekommen soll, und gibt sie ihm trotzdem.</p>
         </div>
         <div class="summary-item animate-from-left">
-            <p>Dieser Plan geht allerdings nach hinten los und Peter dreht wegen des vielen Zuckers komplett durch …</p>
+            <p>Peter dreht daraufhin völlig durch und verliert jegliche Kontrolle. Die Freundesgruppe muss nun verschiedene Strategien entwickeln, um ihn zu fangen und ruhigzustellen.</p>
+        </div>
+        <div class="summary-item animate-from-right">
+            <p>Durch Sherwoods Berechnungen stellen sie fest, dass sie Peter auspowern müssen, um ihn zu fangen. Nachdem sie ihn schließlich aufgebraucht haben, sind sie in der Lage, ihn zu fangen.</p>
+        </div>
+        <div class="summary-item animate-from-left">
+            <p>Leider können sie aufgrund der schlechten PC-Leistung nicht „Hai-Alarm“ spielen, aber sie sind trotzdem froh über die lustigen Ereignisse und den Spaß, den sie hatten.</p>
         </div>
         <div class="animation-wrapper">
-            <div class="animation-text">Achtung, Zuckerrausch!</div>
+            <div class="animation-text">Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!</div>
         </div>
-        <button class="button" onclick="startAnalysis()">Start Analyse</button>
+        <button class="button" onclick="startAnalysis()">Analyse starten</button>
     </div>
 
     <script src="script.js"></script>
