--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angelo - Keine Süßigkeiten für Peter!</title>
+    <title>Keine Süßigkeiten für Peter!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Angelo - Keine Süßigkeiten für Peter!</h1>
-    </header>
+    <header>Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!</header>
+
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.</p>
+            <img src="images/angelo1.jpg" alt="Angelo, Sherwood und Lola" class="image">
         </div>
+
         <div class="summary-item animate-from-right">
-            <p>Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty. Doch er hört ihm nicht bei der Warnung zu, dass Peter keine Süßigkeiten bekommen soll, und gibt sie ihm trotzdem.</p>
+            <p>Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty, aber er hört ihm nicht bei der Warnung, dass Peter keine Süßigkeiten bekommen soll und gibt sie ihm trotzdem. So kommt Peter komplett außer Kontrolle und die Freundesgruppe muss diverse Strategien entwickeln, um ihn zu fangen und ruhigzustellen.</p>
+            <img src="images/angelo2.jpg" alt="Peter außer Kontrolle" class="image">
         </div>
+
         <div class="summary-item animate-from-left">
-            <p>Peter dreht daraufhin völlig durch und verliert jegliche Kontrolle. Die Freundesgruppe muss nun verschiedene Strategien entwickeln, um ihn zu fangen und ruhigzustellen.</p>
+            <p>Sie stellten durch Sherwoods Kalkulationen fest, dass sie ihn auspowern müssen, damit sie ihn fangen können. Schließlich können sie aufgrund der fehlenden Leistung der PCs die Spiele trotzdem nicht spielen, sind aber trotzdem froh über die Geschehnisse, die lustig waren und Spaß gemacht haben.</p>
+            <img src="images/angelo3.jpg" alt="Strategien entwickeln" class="image">
         </div>
+
         <div class="summary-item animate-from-right">
-            <p>Durch Sherwoods Berechnungen stellen sie fest, dass sie Peter auspowern müssen, um ihn zu fangen. Nachdem sie ihn schließlich aufgebraucht haben, sind sie in der Lage, ihn zu fangen.</p>
+            <p>In der Endszene feiern sie die lustigen Erlebnisse, die ihnen viel Spaß bereitet haben, auch ohne das Videospiel spielen zu können.</p>
+            <img src="images/angelo4.jpg" alt="Feiernde Freunde" class="image">
         </div>
-        <div class="summary-item animate-from-left">
-            <p>Leider können sie aufgrund der schlechten PC-Leistung nicht „Hai-Alarm“ spielen, aber sie sind trotzdem froh über die lustigen Ereignisse und den Spaß, den sie hatten.</p>
-        </div>
+
         <div class="animation-wrapper">
-            <div class="animation-text">Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!</div>
+            <button class="button" onclick="alert('Danke fürs Ansehen!')">Mehr erfahren</button>
         </div>
-        <button class="button" onclick="startAnalysis()">Analyse starten</button>
     </div>
 
     <script src="script.js"></script>
