--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.</p>
-            <img src="images/angelo1.jpg" alt="Angelo, Sherwood und Lola" class="image">
+            <img src="images/angelo1.png" alt="Angelo, Sherwood und Lola" class="image">
         </div>
 
         <div class="summary-item animate-from-right">
             <p>Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty, aber er hört ihm nicht bei der Warnung, dass Peter keine Süßigkeiten bekommen soll und gibt sie ihm trotzdem. So kommt Peter komplett außer Kontrolle und die Freundesgruppe muss diverse Strategien entwickeln, um ihn zu fangen und ruhigzustellen.</p>
-            <img src="images/angelo2.jpg" alt="Peter außer Kontrolle" class="image">
+            <img src="images/angelo2.png" alt="Peter außer Kontrolle" class="image">
         </div>
 
         <div class="summary-item animate-from-left">
             <p>Sie stellten durch Sherwoods Kalkulationen fest, dass sie ihn auspowern müssen, damit sie ihn fangen können. Schließlich können sie aufgrund der fehlenden Leistung der PCs die Spiele trotzdem nicht spielen, sind aber trotzdem froh über die Geschehnisse, die lustig waren und Spaß gemacht haben.</p>
-            <img src="images/angelo3.jpg" alt="Strategien entwickeln" class="image">
+            <img src="images/angelo3.png" alt="Strategien entwickeln" class="image">
         </div>
 
         <div class="summary-item animate-from-right">
             <p>In der Endszene feiern sie die lustigen Erlebnisse, die ihnen viel Spaß bereitet haben, auch ohne das Videospiel spielen zu können.</p>
-            <img src="images/angelo4.jpg" alt="Feiernde Freunde" class="image">
+            <img src="images/angelo4.png" alt="Feiernde Freunde" class="image">
         </div>
 
         <div class="animation-wrapper">
