--- a/index.html
+++ b/index.html
@@ -1,40 +1,190 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keine Süßigkeiten für Peter!</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!</header>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    <div class="summary-container">
-        <div class="summary-item animate-from-left">
-            <p>Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.</p>
-            <img src="images/angelo1.png" alt="Angelo, Sherwood und Lola" class="image">
-        </div>
+body {
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(135deg, rgb(196, 164, 132) 0%, rgba(255, 255, 255, 1) 100%);
+    background-attachment: fixed;
+    color: white;
+    overflow-x: hidden;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
-        <div class="summary-item animate-from-right">
-            <p>Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty, aber er hört ihm nicht bei der Warnung, dass Peter keine Süßigkeiten bekommen soll und gibt sie ihm trotzdem. So kommt Peter komplett außer Kontrolle und die Freundesgruppe muss diverse Strategien entwickeln, um ihn zu fangen und ruhigzustellen.</p>
-            <img src="images/angelo2.png" alt="Peter außer Kontrolle" class="image">
-        </div>
+header {
+    font-size: 36px;
+    font-weight: bold;
+    color: #ff6f61;
+    padding-top: 20px;
+    animation: fadeIn 2s ease-out;
+    letter-spacing: 3px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
+}
 
-        <div class="summary-item animate-from-left">
-            <p>Sie stellten durch Sherwoods Kalkulationen fest, dass sie ihn auspowern müssen, damit sie ihn fangen können. Schließlich können sie aufgrund der fehlenden Leistung der PCs die Spiele trotzdem nicht spielen, sind aber trotzdem froh über die Geschehnisse, die lustig waren und Spaß gemacht haben.</p>
-            <img src="images/angelo3.png" alt="Strategien entwickeln" class="image">
-        </div>
+.summary-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    animation: slideUp 2s ease-in-out;
+    padding: 20px 15px;
+    margin-bottom: 100px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
-        <div class="summary-item animate-from-right">
-            <p>In der Endszene feiern sie die lustigen Erlebnisse, die ihnen viel Spaß bereitet haben, auch ohne das Videospiel spielen zu können.</p>
-            <img src="images/angelo4.png" alt="Feiernde Freunde" class="image">
-        </div>
+.summary-item {
+    font-size: 18px;
+    width: 100%;
+    max-width: 800px;
+    padding: 25px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 15px;
+    margin: 10px 0;
+    opacity: 0;
+    transform: translateY(-200px);
+    animation-duration: 1.2s;
+    animation-fill-mode: forwards;
+    color: #fff;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
+}
 
-        <div class="animation-wrapper">
-            <button class="button" onclick="alert('Danke fürs Ansehen!')">Mehr erfahren</button>
-        </div>
-    </div>
+.animate-from-left {
+    animation-name: slideInLeft;
+}
 
-    <script src="script.js"></script>
-</body>
-</html>
+.animate-from-right {
+    animation-name: slideInRight;
+}
+
+.animation-wrapper {
+    position: relative;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.animation-text {
+    font-size: 36px;
+    font-weight: bold;
+    color: #ff6f61;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+    animation: bounce 1.5s infinite;
+    transform: scale(1.2);
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes slideInLeft {
+    from { transform: translateX(-100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
+}
+
+@keyframes slideInRight {
+    from { transform: translateX(100%); opacity: 0; }
+    to { transform: translateX(0); opacity: 1; }
+}
+
+@keyframes slideUp {
+    from { opacity: 0; transform: translateY(100px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes bounce {
+    0% { transform: translate(-50%, -50%) scale(1); }
+    50% { transform: translate(-50%, -50%) scale(1.1); }
+    100% { transform: translate(-50%, -50%) scale(1); }
+}
+
+.button {
+    padding: 15px 30px;
+    background-color: #ff6f61;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
+    margin-top: 30px;
+    z-index: 10;
+}
+
+.button:hover {
+    background-color: #ff3e2e;
+    transform: scale(1.2);
+}
+
+.button:active {
+    transform: scale(1);
+}
+
+@media (max-width: 768px) {
+    body {
+        height: auto;
+        justify-content: flex-start;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    header {
+        font-size: 28px;
+    }
+
+    .summary-item {
+        font-size: 16px;
+        padding: 15px;
+    }
+
+    .button {
+        font-size: 18px;
+        padding: 12px 25px;
+    }
+
+    .image {
+        width: 50%;
+        max-width: 150px;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        font-size: 24px;
+    }
+
+    .summary-item {
+        font-size: 14px;
+        padding: 12px;
+    }
+
+    .button {
+        font-size: 16px;
+        padding: 10px 20px;
+    }
+
+    .image {
+        width: 50%;
+        max-width: 120px;
+        margin-top: 10px;
+    }
+}
+
+.image {
+    width: 100%;
+    max-width: 200px;
+    border-radius: 10px;
+    margin-top: 20px;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
+}
