--- a/index.html
+++ b/index.html
@@ -1,190 +1,35 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, rgb(196, 164, 132) 0%, rgba(255, 255, 255, 1) 100%);
-    background-attachment: fixed;
-    color: white;
-    overflow-x: hidden;
-    height: 100vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-header {
-    font-size: 36px;
-    font-weight: bold;
-    color: #ff6f61;
-    padding-top: 20px;
-    animation: fadeIn 2s ease-out;
-    letter-spacing: 3px;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    margin-bottom: 20px;
-}
-
-.summary-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    animation: slideUp 2s ease-in-out;
-    padding: 20px 15px;
-    margin-bottom: 100px;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.summary-item {
-    font-size: 18px;
-    width: 100%;
-    max-width: 800px;
-    padding: 25px;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 15px;
-    margin: 10px 0;
-    opacity: 0;
-    transform: translateY(-200px);
-    animation-duration: 1.2s;
-    animation-fill-mode: forwards;
-    color: #fff;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
-}
-
-.animate-from-left {
-    animation-name: slideInLeft;
-}
-
-.animate-from-right {
-    animation-name: slideInRight;
-}
-
-.animation-wrapper {
-    position: relative;
-    width: 100%;
-    margin-top: 30px;
-}
-
-.animation-text {
-    font-size: 36px;
-    font-weight: bold;
-    color: #ff6f61;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
-    animation: bounce 1.5s infinite;
-    transform: scale(1.2);
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes slideInLeft {
-    from { transform: translateX(-100%); opacity: 0; }
-    to { transform: translateX(0); opacity: 1; }
-}
-
-@keyframes slideInRight {
-    from { transform: translateX(100%); opacity: 0; }
-    to { transform: translateX(0); opacity: 1; }
-}
-
-@keyframes slideUp {
-    from { opacity: 0; transform: translateY(100px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes bounce {
-    0% { transform: translate(-50%, -50%) scale(1); }
-    50% { transform: translate(-50%, -50%) scale(1.1); }
-    100% { transform: translate(-50%, -50%) scale(1); }
-}
-
-.button {
-    padding: 15px 30px;
-    background-color: #ff6f61;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-    transform: scale(1.1);
-    margin-top: 30px;
-    z-index: 10;
-}
-
-.button:hover {
-    background-color: #ff3e2e;
-    transform: scale(1.2);
-}
-
-.button:active {
-    transform: scale(1);
-}
-
-@media (max-width: 768px) {
-    body {
-        height: auto;
-        justify-content: flex-start;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    header {
-        font-size: 28px;
-    }
-
-    .summary-item {
-        font-size: 16px;
-        padding: 15px;
-    }
-
-    .button {
-        font-size: 18px;
-        padding: 12px 25px;
-    }
-
-    .image {
-        width: 50%;
-        max-width: 150px;
-        margin-top: 10px;
-    }
-}
-
-@media (max-width: 480px) {
-    header {
-        font-size: 24px;
-    }
-
-    .summary-item {
-        font-size: 14px;
-        padding: 12px;
-    }
-
-    .button {
-        font-size: 16px;
-        padding: 10px 20px;
-    }
-
-    .image {
-        width: 50%;
-        max-width: 120px;
-        margin-top: 10px;
-    }
-}
-
-.image {
-    width: 100%;
-    max-width: 200px;
-    border-radius: 10px;
-    margin-top: 20px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
-}
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Keine Süßigkeiten für Peter - Zusammenfassung</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!
+    </header>
+    <div class="summary-container">
+        <div class="summary-item animate-from-left">
+            Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.
+            <img src="images/angelo1.jpg" class="image" alt="Angelo und die Freunde">
+        </div>
+        <div class="summary-item animate-from-right">
+            Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. 
+            Die drei versuchen, Peter ruhigzustellen, doch sie übersehen eine wichtige Warnung und geben ihm Süßigkeiten, was dazu führt, dass Peter völlig außer Kontrolle gerät.
+            <img src="images/angelo2.jpg" class="image" alt="Peter mit Süßigkeiten">
+        </div>
+        <div class="summary-item animate-from-left">
+            Nachdem der Lehrer Schmitty Peter nicht in den Griff bekommt, versuchen die Freunde mit verschiedenen Strategien, ihn zu fangen und zu beruhigen.
+            <img src="images/angelo3.jpg" class="image" alt="Freunde und Peter">
+        </div>
+        <div class="summary-item animate-from-right">
+            Mit Sherwoods Berechnungen und dem Versuch, Peter auszupowern, schaffen sie es, ihn zu beruhigen. Doch aufgrund der fehlenden PC-Leistung können sie das Spiel nicht spielen, was sie jedoch nicht weiter stört.
+            <img src="images/angelo4.jpg" class="image" alt="Spielsituation">
+        </div>
+        <button class="button" onclick="alert('Die Zusammenfassung wurde angezeigt!')">Mehr erfahren</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
