--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.
-            <img src="images/angelo1.jpg" class="image" alt="Angelo und die Freunde">
+            <img src="images/angelo1.png" class="image" alt="Angelo und die Freunde">
         </div>
         <div class="summary-item animate-from-right">
             Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. 
             Die drei versuchen, Peter ruhigzustellen, doch sie übersehen eine wichtige Warnung und geben ihm Süßigkeiten, was dazu führt, dass Peter völlig außer Kontrolle gerät.
-            <img src="images/angelo2.jpg" class="image" alt="Peter mit Süßigkeiten">
+            <img src="images/angelo2.jpng" class="image" alt="Peter mit Süßigkeiten">
         </div>
         <div class="summary-item animate-from-left">
             Nachdem der Lehrer Schmitty Peter nicht in den Griff bekommt, versuchen die Freunde mit verschiedenen Strategien, ihn zu fangen und zu beruhigen.
-            <img src="images/angelo3.jpg" class="image" alt="Freunde und Peter">
+            <img src="images/angelo3.png" class="image" alt="Freunde und Peter">
         </div>
         <div class="summary-item animate-from-right">
             Mit Sherwoods Berechnungen und dem Versuch, Peter auszupowern, schaffen sie es, ihn zu beruhigen. Doch aufgrund der fehlenden PC-Leistung können sie das Spiel nicht spielen, was sie jedoch nicht weiter stört.
-            <img src="images/angelo4.jpg" class="image" alt="Spielsituation">
+            <img src="images/angelo4.png" class="image" alt="Spielsituation">
         </div>
         <button class="button" onclick="alert('Die Zusammenfassung wurde angezeigt!')">Mehr erfahren</button>
     </div>
