--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="summary-item animate-from-right">
             Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. 
             Die drei versuchen, Peter ruhigzustellen, doch sie übersehen eine wichtige Warnung und geben ihm Süßigkeiten, was dazu führt, dass Peter völlig außer Kontrolle gerät.
-            <img src="images/angelo2.jpng" class="image" alt="Peter mit Süßigkeiten">
+            <img src="images/angelo2.png" class="image" alt="Peter mit Süßigkeiten">
         </div>
         <div class="summary-item animate-from-left">
             Nachdem der Lehrer Schmitty Peter nicht in den Griff bekommt, versuchen die Freunde mit verschiedenen Strategien, ihn zu fangen und zu beruhigen.
