--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             Mit Sherwoods Berechnungen und dem Versuch, Peter auszupowern, schaffen sie es, ihn zu beruhigen. Doch aufgrund der fehlenden PC-Leistung können sie das Spiel nicht spielen, was sie jedoch nicht weiter stört.
             <img src="images/angelo4.png" class="image" alt="Spielsituation">
         </div>
-        <button class="button" onclick="alert('Die Zusammenfassung wurde angezeigt!')">Mehr erfahren</button>
-    </div>
+        <a href="https://www.youtube.com/watch?v=7IZxg3Sdaoc" target="_blank">
+        <button class="button">Mehr erfahren</button>
+    </a>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
