--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        Chaos, Spaß und eine völlig außer Kontrolle geratene Situation!
+        Ismas Lieblingsfolge - Keine Süßigkeiten für Peter!
     </header>
     <div class="summary-container">
         <div class="summary-item animate-from-left">
