--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keine Süßigkeiten für Peter - Zusammenfassung</title>
+    <title>Angelo Folge - Keine Süßigkeiten für Peter!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header id="header">
+        
         Ismas Lieblingsfolge - Keine Süßigkeiten für Peter!
+        
     </header>
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.
-            <img src="images/angelo1.png" class="image" alt="Angelo und die Freunde">
+            <img src="images/angelo1.jpg" alt="Angelo, Sherwood und Lola" class="image">
         </div>
         <div class="summary-item animate-from-right">
-            Allerdings hat Angelo ganz vergessen, dass er auf seinen kleinen Bruder Peter aufpassen muss. 
-            Die drei versuchen, Peter ruhigzustellen, doch sie übersehen eine wichtige Warnung und geben ihm Süßigkeiten, was dazu führt, dass Peter völlig außer Kontrolle gerät.
-            <img src="images/angelo2.png" class="image" alt="Peter mit Süßigkeiten">
+            Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty, aber er hört ihm nicht bei der Warnung, dass Peter keine Süßigkeiten bekommen soll und gibt sie ihm trotzdem. Somit kommt Peter komplett außer Kontrolle.
+            <img src="images/angelo2.jpg" alt="Peter außer Kontrolle" class="image">
         </div>
         <div class="summary-item animate-from-left">
-            Nachdem der Lehrer Schmitty Peter nicht in den Griff bekommt, versuchen die Freunde mit verschiedenen Strategien, ihn zu fangen und zu beruhigen.
-            <img src="images/angelo3.png" class="image" alt="Freunde und Peter">
+            Die Freundesgruppe muss diverse Strategien entwickeln, um ihn zu fangen und ruhigzustellen. Sie stellten heraus, dass sie ihn auspowern müssen, damit sie ihn fangen können.
+            <img src="images/angelo3.jpg" alt="Strategien entwickeln" class="image">
         </div>
         <div class="summary-item animate-from-right">
-            Mit Sherwoods Berechnungen und dem Versuch, Peter auszupowern, schaffen sie es, ihn zu beruhigen. Doch aufgrund der fehlenden PC-Leistung können sie das Spiel nicht spielen, was sie jedoch nicht weiter stört.
-            <img src="images/angelo4.png" class="image" alt="Spielsituation">
+            Schließlich können sie aufgrund der fehlenden Leistung der PCs die Spiele trotzdem nicht spielen, aber sind trotzdem froh über die Geschehnisse, die lustig waren und Spaß gemacht haben.
+            <img src="images/angelo4.jpg" alt="Spaß und Freude" class="image">
         </div>
         <a href="https://www.youtube.com/watch?v=7IZxg3Sdaoc" target="_blank">
-        <button class="button">Mehr erfahren</button>
-    </a>
-</div>
+            <button class="button">Mehr erfahren</button>
+        </a>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
