--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <div class="summary-container">
         <div class="summary-item animate-from-left">
             Angelo, Sherwood und Lola sehnen das Wochenende herbei. Ihnen ist es gelungen, dass sie den Schulcomputer nutzen dürfen, um ihr geliebtes Videospiel „Hai-Alarm“ zu spielen.
-            <img src="images/angelo1.jpg" alt="Angelo, Sherwood und Lola" class="image">
+            <img src="images/angelo1.png" alt="Angelo, Sherwood und Lola" class="image">
         </div>
         <div class="summary-item animate-from-right">
             Die drei sitzen im Computerraum und Angelo übergibt Peter dem Lehrer Schmitty, aber er hört ihm nicht bei der Warnung, dass Peter keine Süßigkeiten bekommen soll und gibt sie ihm trotzdem. Somit kommt Peter komplett außer Kontrolle.
-            <img src="images/angelo2.jpg" alt="Peter außer Kontrolle" class="image">
+            <img src="images/angelo2.png" alt="Peter außer Kontrolle" class="image">
         </div>
         <div class="summary-item animate-from-left">
             Die Freundesgruppe muss diverse Strategien entwickeln, um ihn zu fangen und ruhigzustellen. Sie stellten heraus, dass sie ihn auspowern müssen, damit sie ihn fangen können.
-            <img src="images/angelo3.jpg" alt="Strategien entwickeln" class="image">
+            <img src="images/angelo3.png" alt="Strategien entwickeln" class="image">
         </div>
         <div class="summary-item animate-from-right">
             Schließlich können sie aufgrund der fehlenden Leistung der PCs die Spiele trotzdem nicht spielen, aber sind trotzdem froh über die Geschehnisse, die lustig waren und Spaß gemacht haben.
-            <img src="images/angelo4.jpg" alt="Spaß und Freude" class="image">
+            <img src="images/angelo4.png" alt="Spaß und Freude" class="image">
         </div>
         <a href="https://www.youtube.com/watch?v=7IZxg3Sdaoc" target="_blank">
             <button class="button">Mehr erfahren</button>
